--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,16 @@
-
+html<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#ea580c" />
+    <meta name="description" content="Soul Shakti Wellness - Divine transformation through Maa Durga's blessings. Founded by Nagesh." />
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+    <title>Soul Shakti Wellness - Divine Healing</title>
+  </head>
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+  </body>
+</html>
